Backport of HDFS-3629 from trunk. svn merge -c 1359905 ../../trunk (harsh)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1359906 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -115,6 +115,9 @@ Release 2.0.1-alpha - UNRELEASED
 
     HDFS-3568. fuse_dfs: add support for security. (Colin McCabe via atm)
 
+    HDFS-3629. Fix the typo in the error message about inconsistent
+    storage layout version. (Brandon Li via harsh)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
