Backport of HDFS-3613 from trunk. svn merge -c 1359999 ../../trunk (harsh)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1360000 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -118,6 +118,9 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3629. Fix the typo in the error message about inconsistent
     storage layout version. (Brandon Li via harsh)
 
+    HDFS-3613. GSet prints some INFO level values, which aren't
+    really very useful to all (Andrew Wang via harsh)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
