HDFS-3615. Two BlockTokenSecretManager findbugs warnings. Contributed by Aaron T. Myers.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1360256 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -299,6 +299,8 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3548. NamenodeFsck.copyBlock fails to create a Block Reader.
     (Colin Patrick McCabe via eli)
 
+    HDFS-3615. Two BlockTokenSecretManager findbugs warnings. (atm)
+
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
     HDFS-2185. HDFS portion of ZK-based FailoverController (todd)
