HDFS-3633. libhdfs: hdfsDelete should pass JNI_FALSE or JNI_TRUE. Contributed by Colin Patrick McCabe
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1361006 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -128,6 +128,9 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3641. Move server Util time methods to common and use now
     instead of System#currentTimeMillis. (eli)
 
+    HDFS-3633. libhdfs: hdfsDelete should pass JNI_FALSE or JNI_TRUE.
+    (Colin Patrick McCabe via eli)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
