--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -131,6 +131,9 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3633. libhdfs: hdfsDelete should pass JNI_FALSE or JNI_TRUE.
     (Colin Patrick McCabe via eli)
 
+    HDFS-799. libhdfs must call DetachCurrentThread when a thread is destroyed.
+    (Colin Patrick McCabe via eli)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
