HDFS-3306. fuse_dfs: don't lock release operations. Contributed by Colin Patrick McCabe
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1361022 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -134,6 +134,9 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-799. libhdfs must call DetachCurrentThread when a thread is destroyed.
     (Colin Patrick McCabe via eli)
 
+    HDFS-3306. fuse_dfs: don't lock release operations.
+    (Colin Patrick McCabe via eli)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
