HDFS-3612. Single namenode image directory config warning can be improved. Contributed by Andy Isaacson. (harsh)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1361060 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -137,6 +137,9 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3306. fuse_dfs: don't lock release operations.
     (Colin Patrick McCabe via eli)
 
+    HDFS-3612. Single namenode image directory config warning can
+    be improved. (Andy Isaacson via harsh)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
