MAPREDUCE-4422. YARN_APPLICATION_CLASSPATH needs a documented default value in YarnConfiguration. Contributed by Ahmed Radwan. (harsh)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1361062 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -161,6 +161,9 @@ Release 2.0.0-alpha - 05-23-2012
     MAPREDUCE-3906. Fix inconsistency in documentation regarding
     mapreduce.jobhistory.principal. (Eugene Koontz via harsh)
 
+    MAPREDUCE-4422. YARN_APPLICATION_CLASSPATH needs a documented default
+    value in YarnConfiguration. (Ahmed Radwan via harsh)
+
   OPTIMIZATIONS
 
   BUG FIXES
