--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -98,6 +98,9 @@ Release 2.0.1-alpha - UNRELEASED
     HADOOP-8499. Lower min.user.id to 500 for the tests.
     (Colin Patrick McCabe via eli)
 
+    MAPREDUCE-4395. Possible NPE at ClientDistributedCacheManager
+    #determineTimestamps (Bhallamudi via bobby)
+
 Release 2.0.0-alpha - 05-23-2012
 
   INCOMPATIBLE CHANGES
