--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -157,6 +157,8 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3537. Move libhdfs and fuse-dfs source to native subdirectories.
     (Colin Patrick McCabe via eli)
 
+    HDFS-3665. Add a test for renaming across file systems via a symlink. (eli)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
