--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -159,6 +159,8 @@ Release 2.0.1-alpha - UNRELEASED
 
     HDFS-3665. Add a test for renaming across file systems via a symlink. (eli)
 
+    HDFS-3666. Plumb more exception messages to terminate. (eli)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
