--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -163,6 +163,8 @@ Release 2.0.1-alpha - UNRELEASED
 
     HDFS-3673. libhdfs: fix some compiler warnings. (Colin Patrick McCabe via eli)
 
+    HDFS-3675. libhdfs: follow documented return codes. (Colin Patrick McCabe via eli)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
