--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -371,6 +371,8 @@ Release 2.0.1-alpha - UNRELEASED
     HDFS-3608. HDFS-3608. fuse_dfs: detect changes in UID ticket cache. (Colin
     Patrick McCabe via atm)
 
+    HDFS-3709. TestStartup tests still binding to the ephemeral port. (eli)
+
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
     HDFS-2185. HDFS portion of ZK-based FailoverController (todd)
