--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -170,6 +170,8 @@ Release 2.0.1-alpha - UNRELEASED
 
     HDFS-3583. Convert remaining tests to Junit4. (Andrew Wang via atm)
 
+    HDFS-3711. Manually convert remaining tests to JUnit4. (Andrew Wang via atm)
+
   OPTIMIZATIONS
 
     HDFS-2982. Startup performance suffers when there are many edit log
