--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -375,6 +375,8 @@ Release 2.0.1-alpha - UNRELEASED
 
     HDFS-3709. TestStartup tests still binding to the ephemeral port. (eli)
 
+    HDFS-3720. hdfs.h must get packaged. (Colin Patrick McCabe via atm)
+
   BREAKDOWN OF HDFS-3042 SUBTASKS
 
     HDFS-2185. HDFS portion of ZK-based FailoverController (todd)
